--- a/user/vivek_78/about.html
+++ b/user/vivek_78/about.html
@@ -38,8 +38,13 @@
         }
         h1{
             font-weight: 200;}
+            .application-container{
+                margin: 20px 40px;
+                letter-spacing: 1px;
+                line-height: 25px;
+            }
         .container{
-            border: 1px rgb(189, 189, 189) solid;
+            border: 0px rgb(189, 189, 189) solid;
             margin: 30px 40px;
             padding: 20px;
         }
@@ -49,6 +54,10 @@
             margin: 10px 20px;
             padding: 10px 20px;
             width: 20%;
+        }
+        .roll{
+            margin-left: 5px;
+            margin-right: 5px;
         }
         .guide{
             color: rgb(46, 46, 46);
@@ -69,12 +78,6 @@
     </style>
 </head>
 <body>
-    <div class="maintain">
-        <h1>Maintain Text</h1>
-    </div>
-    <div class="support">
-        <h4>Oops! something went wrong, try agian later.</h4>
-    </div>
     <div class="home">
         <nav class="navbar">
             <ul>
@@ -112,13 +115,122 @@
     </center>
     <br><br><br><br><br>
 
+    <div class="application-container">
+        <h3> Some Applications on AI (Google)</h3>
+        Artificial Intelligence (AI) and its multiple sub-domains are being increasingly employed in various industries and businesses to aid in repetitive processes. But there has been a burgeoning interest from established tech giants and startups in using AI to make everyday life a walk in the park.
+        <br><br>
+AI has been highly instrumental in optimizing the way we entertain ourselves, interact with our mobile devices, to even driving vehicles for us. We tend to encounter Machine Learning (ML) algorithms and Natural Language Processing (NLP) in several everyday tasks more than we know.
+<br><br>
+<strong>Two Categories for AI Usage</strong><br><br>
+
+We can classify the way AI is utilized to improve the functionalities of everyday life into two broad streams.
+<br><br>
+i)Software/Methodology:
+
+Prominent examples of AI software used in everyday life include voice assistants, image recognition for face unlock in mobile phones, and ML-based financial fraud detection. AI software usually involves just downloading software with AI capabilities from an online store and requires no peripheral devices.
+<br><br>
+ii)Embodied:
+
+The hardware side of AI includes its utilization in drones, self-driven vehicles, assembly-line robots, and the Internet of Things (IoT). This involves the design of specific devices that are based on AI capabilities.
+<br><br><br>
+<strong>10 Applications of AI Capabilities in Everyday Life</strong>
+<br><br>
+AI and ML-powered software and devices are mimicking human thought patterns to facilitate the digital transformation of society. AI systems perceive their environment, deal with what they perceive, solve problems and act to help with tasks to make everyday life easier.
+<br><br>
+<i> Here are 10 areas where AI plays an important role in helping humans with their everyday requirements:</i>
+<br><br>
+<strong> 1) Voice Assistants</strong>
+
+Digital assistants like Siri, Google Home, and Alexa use AI-backed Voice User Interfaces (VUI) to process and decipher voice commands. AI gives these applications the freedom to not solely rely on voice commands but also leverage vast databases on cloud storage platforms. These applications can then parse thousands of lines of data per second to complete tasks and bring back tailored search engine results.
+
+There is a sweeping change in consumer awareness and an increase in comfort levels with this technology. Voice assistant interfaces are rapidly advancing, especially finding use in healthcare to identify certain diseases through vocal biomarkers. Voice-based chatbots are also being integrated into telehealth applications for triage and screening.
+<br><br>
+<strong> 2) Entertainment Streaming Apps</strong>
+
+Streaming giants like Netflix, Spotify, and Hulu are continually feeding data into machine learning algorithms to make the user experience seamless.
+
+Carefully looking at the user's interaction with various media, these streaming apps recommend custom content. Using AI to parse through the ever-increasing user data, these apps create catalogs of music, movies, and TV series suited to each individual user's liking.
+
+AI also plays an important role in providing uninterrupted streaming by automating the allocation of servers closest to the user. Bandwidth allocation also changes automatically based on the popularity of a particular piece of media.
+<br><br>
+<strong> 3) Personalized </strong>
+
+Brands use AI-driven personalization solutions based on customer data to drive more engagement. A report compiled by OneSpot Research revealed that 88% of the surveyed consumers stated that more personalized content makes them feel better about a brand.
+
+Consumers are more likely to make a purchase when they are directed to products through personalized marketing via automated e-mails and feedback forms. Recent innovations with AI claim to use computer vision to predict an advertisement’s performance, helping brands reach the right people and serving those who need those products. AI marketing apps help both prospects and retargeted customers, depending on the marketing stage.
+<br><br>
+<strong> 4) Smart Input Keyboards</strong>
+
+The latest versions of mobile keyboard apps combine the provisions of autocorrection and language detection to provide a user-friendly experience.
+
+With the help of AI, these apps can efficiently correct mistakes, help switch between languages, and predict the next word in a non-intrusive manner. Utilizing the principle of the "random forest" machine learning algorithm, AI programmers are teaching these apps to understand the context of the message being typed and make accurate predictions.
+
+Apps like Typewise and Swiftkey are now integrated with over 300 languages and dialects. Added facilities like real-time translation and integrated search engines are also being introduced lately.
+<br><br>
+<strong> 5) Navigation and Travel</strong>
+
+The work of AI programmers behind navigation apps like Google Maps and Waze never ends. Yottabytes of geographical data which is updated every second can only be effectively cross-checked by ML algorithms unleashed on satellite images.
+
+Recently, researchers at MIT developed a navigation model that tags road features in digital maps, all in real-time. These digital maps are also created simultaneously based on satellite imagery incorporating information about cycling lanes and parking spots.
+
+Imaging algorithms built on Convolutional Neural Networks (CNN) and Graph Neural Networks (GNN) have simplified regular updates in routes. AI also helps ascertain routes on satellite images covered by natural overgrowth with the help of predictive models.
+<br><br>
+<strong> 6) Gamified Therapy</strong>
+
+AI had found a place in gaming from the time classics such as Pac-Man and Pong were around for intuitive universe-building. However, until now innovations in gaming AI have focused on presenting more interesting challenges to the gamer and not on gauging the gamer's mindset.
+
+Gamified applications are now being designed to gauge the gamer's mental fortitude in the face of certain defeat. This is helping to study methods to mitigate depression and anxiety in gamers and people in general.
+
+Using Virtual Reality (VR) headsets, some of these gaming applications provide Cognitive Behavioral Therapy (CBT) for enhanced engagement with the person. AI helps these games to adapt to the user's behavior based on examined stimuli as the game progresses.
+<br><br>
+<strong> 7) Self-driving Vehicles</strong>
+
+The technology of Autonomous Vehicle AI is witnessing large-scale innovation driven by global corporate interest. AI is making innovations beyond cruise-control and blind-spot detection to include fully autonomous capabilities.
+
+Deep Reinforcement Learning (DRL), a subset of machine learning, is being applied to teach vehicles to operate independently. Path planning in the face of static and dynamic obstacles is being made possible through various predictive AI models.
+
+ Predicting accurately when neighboring vehicles will swerve and other such unforeseen events are being taken into account. Simultaneous Localization and Mapping (SLAM) is the technology that makes this possible with real-time orientation to surroundings via sensors.
+ <br><br>
+<strong> 8)Facial Recognition Technologies</strong>
+
+The most popular application of this technology is in the Face ID unlock feature in most of the flagship smartphone models today. The biggest challenge faced by this technology is widespread concern around the racial and gender bias of its use in forensics.
+
+Generative Adversarial Neural Networks (GANN) are being applied to reduce the margin of error in facial recognition software. These neural networks are also being trained to pinpoint the unethical use of Deepfake technology.
+
+Various industries are also developing AI software that picks up facial expressions to identify mood and intention. Emotion AI or Affective Computing is an emerging area of interest to gauge customer experience.
+<br><br>
+<strong> 9) Security and Surveillance</strong>
+
+It is nearly impossible for a human being to keep a constant eye on too many monitors of a CCTV network at the same time. So, naturally, we have felt the need to automate such surveillance tasks and further enhance them by leveraging machine learning methodologies.
+
+AI frees up human surveillants to focus on the verification of crucial incidents and act upon them. The constant monitoring and detection part of surveillance is taken up by AI video monitoring software. AI can pick up irregular behavior that might sometimes be missed by human eyes.
+
+An extension of AI-based facial recognition software is also being employed in surveillance systems of high-risk public places like government buildings. Currently, liberal governments are finding ways to reduce the risk of privacy breaches from AI surveillance.
+<br><br>
+<strong> 10) Internet of Things</strong>
+
+The confluence of AI and the Internet of Things (IoT) opens up a plethora of opportunities to develop smarter home appliances that require minimal human interference to operate. While IoT deals with devices interacting with the internet, the AI part helps these devices to learn from data.
+
+The five broad steps involved in IoT-enabling are - create, communicate, aggregate, analyze and act. The efficacy of the ultimate step, "act", is based on the depth of analysis, and AI adds tons of value to it.
+
+AI unlocks the potential of the data aggregated by IoT devices via sensors. Learnings from this data over multiple iterations enable IoT devices to respond to human stimuli and requirements better.
+<br><br>
+<strong> AI is the Backbone of Technological Progress</strong>
+<br><br>
+AI is constantly influencing the choices made by R&D departments across multiple industries, from healthcare to defense technology. Research by Accenture reveals that by the end of the next fiscal more than 65% of all globally incorporated outfits plan to invest in AI.
+<br><br>
+Daffodil can provide their insightful understanding of AI to build technology solutions such as the MANI App. If you wish to know how AI can expedite your technological processes, you can find out about our AI Software Development team.
+    </div>
+
+    <br><br><br><br><br>
+
 <div class="container">
     <h2>Group Members</h2>
-    <div class="member">• Vivek Mule</div>
-    <div class="member">• Vivek Mule</div>
-    <div class="member">• Vivek Mule</div>
-    <div class="member">• Vivek Mule</div>
-    <div class="member">• Vivek Mule</div>
+    <div class="member">• <span class="roll">77</span> Keshav More</div>
+    <div class="member">• <span class="roll">78</span> Vivek Mule</div>
+    <div class="member">• <span class="roll">79</span> Pranav Nagre</div>
+    <div class="member">• <span class="roll">80</span> Tejas Nalkar</div>
+    <div class="member">• <span class="roll">81</span> Pranav Nile</div>
 
     <div class="guide">Guided by Y. A. Bhavsar</div>
 
@@ -126,6 +238,12 @@
 
     </div>
 
+    <div class="maintain">
+        <h3>Error 423</h3>
+    </div>
+    <div class="support">
+        <h3>Error 505</h3>
+    </div>
     <script>
 
 function machine() {
