--- a/user/vivek_78/deep learning.html
+++ b/user/vivek_78/deep learning.html
@@ -52,12 +52,6 @@
     </style>
 </head>
 <body>
-    <div class="maintain">
-        <h1>Maintain Text</h1>
-    </div>
-    <div class="support">
-        <h4>Oops! something went wrong, try agian later.</h4>
-    </div>
     <div class="home">
         <nav class="navbar">
             <ul>
@@ -199,6 +193,12 @@
 <br><br><br><br><br><br>
     </div>
 
+    <div class="maintain">
+        <h3>Error 423</h3>
+    </div>
+    <div class="support">
+        <h3>Error 505</h3>
+    </div>
     <script>
 
 function ai() {
