--- a/user/vivek_78/index.html
+++ b/user/vivek_78/index.html
@@ -52,12 +52,6 @@
     </style>
 </head>
 <body>
-    <div class="maintain">
-        <h1>Maintain Text</h1>
-    </div>
-    <div class="support">
-        <h4>Oops! something went wrong, try agian later.</h4>
-    </div>
     <div class="home">
         <nav class="navbar">
             <ul>
@@ -104,7 +98,7 @@ in society.
 This paper is about examining the history of artificial intelligence from theory to practice and from its rise to fall,
 highlighting a few major themes and advances.
         </p>
-        <img class="float-left" src="sample.jpg" width="100%"><br>
+        <img class="float-left" src="https://miro.medium.com/max/760/1*XHVgYb9h0nuzr84VI6ujBw.png" width="100%"><br>
     </div><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <section>
@@ -198,6 +192,12 @@ The field of AI research was founded at a workshop held on the campus of Dartmou
 <br><br><br><br><br><br>
     </div>
 
+    <div class="maintain">
+        <h3>Error 423</h3>
+    </div>
+    <div class="support">
+        <h3>Error 505</h3>
+    </div>
     <script>
 
 function machine() {
