--- a/album.html
+++ b/album.html
@@ -6,6 +6,7 @@
     <!-- <link href="https://rubyproducti9n.github.io/concertera/mdb/css/global.min.css" rel="stylesheet"> -->
     <!-- <link href="https://rubyproducti9n.github.io/concertera/css/room.css" rel="stylesheet"> -->
 
+    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -18,6 +19,8 @@
     <title>Mechanical Unofficial</title>
 </head>
 <style>
+
+  @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Comfortaa:wght@700&display=swap');
     @import url("//use.fontawesome.com/releases/v5.15.3/css/all.css");
@@ -25,7 +28,75 @@
     font-family: Arial, Helvetica, sans-serif;
     }
     hr{background: rgb(75, 75, 75);}
-
+    .head-font{
+      font-size: 10px;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    .primary-font{
+      font-size: 14px;
+      font-family: 'Jost', sans-serif;
+    }
+    .login-container{
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: 0px;
+      padding: 15% 40px;
+      background-color: rgb(255, 255, 255);
+      backdrop-filter: blur(0px);
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.199);
+      border-radius: 16px;
+    }
+    .login-sub{
+      margin: auto;
+      width: 90%;
+    }
+    .login-sub h2{
+      color: rgb(48, 48, 48);
+    }
+    .input{
+      width: 30vw;
+      margin: 10px 0;
+      border: 1px rgb(177, 177, 177) solid;
+      border-radius: 16px;
+      outline: none;
+      padding: 10px;
+      font-family: 'Jost', sans-serif;
+    }
+    .btn-login{
+      color: #fff;
+      background-color: #ff0055;
+      padding: 10px 20px;
+    }
+    #user_avatar{
+      width: 20%;
+      border-radius: 100px;
+    }
+    .text{
+      float: right;
+      width: 75%;
+      color: #000;
+      margin-left: 10px;
+      margin-top: 20px;
+    }
+    .user-detail{
+      display: none;
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      background: #fff;
+      border: 1px rgb(221, 221, 221) solid;
+      border-radius: 28px;
+      width: 20%;
+      margin: 0px 0;
+      padding: 20px;
+    }
+    .adjust{
+      display: inline;
+    }
     .nav-bar{
       display: none;
   position: fixed;
@@ -59,8 +130,10 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 600;
     }
-
-.header {
+.update{
+  margin: 10px 30px;
+}
+.header2 {
     text-align: center;
     padding: 32px;
   }
@@ -75,16 +148,24 @@
 
   /* Create four equal columns that sits next to each other */
   .column {
-    -ms-flex: 24.2%; /* IE10 */
-    flex: 24.2%;
-    max-width: 24.2%;
-    padding: 0 4px;
+    -ms-flex: 25%; /* IE10 */
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 8px;
   }
 
   .column img {
-    margin-top: 8px;
+    margin-top: 10px;
     vertical-align: middle;
+    border-radius: 6px;
     width: 100%;
+    padding: 6px 0;
+  }
+  img::after{
+    content: ' sadsd';
+    color: rgb(255, 0, 0);
+    background: #000;
+    z-index: 14;
   }
 
   /* Responsive layout - makes a two column-layout instead of four columns */
@@ -108,15 +189,66 @@
 <script>
 
 </script>
-<body>
+<body onload="login_show()">
+
+  <header class="header">
+    <a href="#" class="header__logo">MECHANICAL DEPT.</a>
+
+    <i class='bx bx-menu header__toggle' id="header-toggle"></i>
+
+    <nav class="nav" id="nav-menu">
+        <div class="nav__content bd-grid">
+            <a href="" class="nav__perfil">
+                <div class="nav__img">
+                    <img src="img/profile-avatar.png" alt="">
+                </div>
+
+                <div>
+                    <span id="user_name" class="nav__name">Log In</span>
+                    <!-- <span class="nav__name">Mitchell</span> -->
+                </div>
+            </a>
+
+            <div class="nav__menu">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#" class="nav__link active">Home</a></li>
+
+                    <li class="nav__item dropdown">
+                        <a href="#" class="nav__link dropdown__link">About <i class='bx bx-chevron-down dropdown__icon'></i></a>
 
 
-<div class="nav-bar">
+                        <ul class="dropdown__menu">
+                            <li class="dropdown__item"><a href="#" class="nav__link">About me</a></li>
+                            <li class="dropdown__item"><a href="#" class="nav__link">Location</a></li>
+                            <li class="dropdown__item"><a href="#" class="nav__link">Studies</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav__item"><a href="#" class="nav__link">Skills</a></li>
+
+                    <li class="nav__item dropdown">
+                        <a href="#" class="nav__link dropdown__link">Works <i class='bx bx-chevron-down dropdown__icon'></i></a>
+
+
+                        <ul class="dropdown__menu">
+                            <li class="dropdown__item"><a href="#" class="nav__link">Recent jobs</a></li>
+                            <li class="dropdown__item"><a href="#" class="nav__link">Better jobs</a></li>
+                            <li class="dropdown__item"><a href="#" class="nav__link">Work Awards</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+<!-- <div class="nav-bar">
   <a class="link" onclick="home()">
   <img class="brand-lg" src="img/avatar.jpg">
   <p class="brand-name">Mechnaical Unofficial</p>
   </a>
-</div>
+</div> -->
 
 <!-- <nav class="custom-nav">
     <a class="">
@@ -128,64 +260,75 @@
     <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Coming Soon</h2>
     <br>
 </div> -->
-<div class="main-container">
+<div id="home" class="main-container">
+
 <br><br><br><br>
 
 <!-- Header -->
-<div class="header">
+<div class="header2">
     <h1>#2K22 Mechanical Batch</h1>
     <p>Unofficial Album</p>
   </div>
+
 <!--
   <h1>• Photos</h1> -->
-
+<!-- <iframe src="album.html" width="100%" height="1000px"></iframe> -->
   <!-- Photo Grid -->
-  <div class="row">
+  <div id="control" class="row">
     <div class="column">
-        <img src="memories/m (2).jpg" style="width:100%">
-        <img src="memories/g10.jpg" style="width:100%">
-      <img src="memories/g0.jpg" style="width:100%">
-      <img src="memories/g1.jpg" style="width:100%">
-      <img src="memories/g2.jpg" style="width:100%">
-      <img src="memories/g3.jpg" style="width:100%">
-      <img src="memories/g4.jpg" style="width:100%">
-      <img src="memories/g5.jpg" style="width:100%">
-      <!-- <img src="memories/g6.jpg" style="width:100%"> -->
+        <img draggable="false" src="memories/m (2).jpg" style="width:100%">
+        <img draggable="false" src="memories/g10.jpg" style="width:100%">
+      <img draggable="false" src="memories/g0.jpg" style="width:100%">
+      <img draggable="false" src="memories/g1.jpg" style="width:100%">
+      <img draggable="false" src="memories/g2.jpg" style="width:100%">
+      <img draggable="false" src="memories/g3.jpg" style="width:100%">
+      <img draggable="false" src="memories/g4.jpg" style="width:100%">
+      <img draggable="false" src="memories/g5.jpg" style="width:100%">
+      <!-- <img draggable="false" src="memories/g6.jpg" style="width:100%"> -->
     </div>
     <div class="column">
-        <img src="memories/m (1).jpg" style="width:100%">
-        <img src="memories/m (5).jpg" style="width:100%">
-        <img src="memories/g5.jpg" style="width:100%">
-        <img src="memories/g2.jpg" style="width:100%">
-        <img src="memories/g0.jpg" style="width:100%">
-        <img src="memories/g4.jpg" style="width:100%">
-        <img src="memories/g1.jpg" style="width:100%">
-        <img src="memories/g3.jpg" style="width:100%">
-        <img src="memories/g6.jpg" style="width:100%">
+        <img draggable="false" src="memories/m (1).jpg" style="width:100%">
+        <img draggable="false" src="memories/m (5).jpg" style="width:100%">
+        <img draggable="false" src="memories/g5.jpg" style="width:100%">
+        <img draggable="false" src="memories/g2.jpg" style="width:100%">
+        <img draggable="false" src="memories/g0.jpg" style="width:100%">
+        <img draggable="false" src="memories/g4.jpg" style="width:100%">
+        <img draggable="false" src="memories/g1.jpg" style="width:100%">
+        <img draggable="false" src="memories/g3.jpg" style="width:100%">
+        <img draggable="false" src="memories/g6.jpg" style="width:100%">
     </div>
     <div class="column">
-        <img src="memories/g3.jpg" style="width:100%">
-        <img src="memories/g1.jpg" style="width:100%">
-        <img src="memories/g4.jpg" style="width:100%">
-        <img src="memories/g0.jpg" style="width:100%">
-        <img src="memories/g2.jpg" style="width:100%">
-        <img src="memories/g6.jpg" style="width:100%">
-        <img src="memories/m (4).jpg" style="width:100%">
-        <img src="memories/m (3).jpg" style="width:100%">
-        <img src="memories/g5.jpg" style="width:100%">
+        <img draggable="false" src="memories/g3.jpg" style="width:100%">
+        <img draggable="false" src="memories/g1.jpg" style="width:100%">
+        <img draggable="false" src="memories/g4.jpg" style="width:100%">
+        <img draggable="false" src="memories/g0.jpg" style="width:100%">
+        <img draggable="false" src="memories/g2.jpg" style="width:100%">
+        <img draggable="false" src="memories/g6.jpg" style="width:100%">
+        <img draggable="false" src="memories/m (4).jpg" style="width:100%">
+        <img draggable="false" src="memories/m (3).jpg" style="width:100%">
+        <img draggable="false" src="memories/g5.jpg" style="width:100%">
     </div>
     <div class="column">
-        <img src="memories/m (1).jpg" style="width:100%">
-        <img src="memories/g1.jpg" style="width:100%">
-        <img src="memories/g3.jpg" style="width:100%">
-        <img src="memories/g0.jpg" style="width:100%">
-        <img src="memories/g2.jpg" style="width:100%">
-        <img src="memories/g4.jpg" style="width:100%">
-        <img src="memories/g6.jpg" style="width:100%">
-        <img src="memories/g5.jpg" style="width:100%">
-        <img src="memories/m (6).jpg" style="width:100%">
+        <img draggable="false" src="memories/m (1).jpg" style="width:100%">
+        <img draggable="false" src="memories/g1.jpg" style="width:100%">
+        <img draggable="false" src="memories/g3.jpg" style="width:100%">
+        <img draggable="false" src="memories/g0.jpg" style="width:100%">
+        <img draggable="false" src="memories/g2.jpg" style="width:100%">
+        <img draggable="false" src="memories/g4.jpg" style="width:100%">
+        <img draggable="false" src="memories/g6.jpg" style="width:100%">
+        <img draggable="false" src="memories/g5.jpg" style="width:100%">
+        <img draggable="false" src="memories/m (6).jpg" style="width:100%">
     </div>
   </div>
+
+    <!-- <div id="user_detail_container" class="user-detail">
+      <img id="user_avatar" class="adjust" src="img/profile-avatar.png">
+     <p class="adjust text"></p>
+    </div> -->
+<div class="update primary-font">Last updated 29-Jun-22</div>
+<div class="management primary-font">
+  This website is managed by ACTIVE COMMUNITY OF MECH
+</div>
   <!-- <hr width="80%">
   <h1>• Videos</h1>
   <div class="row">
@@ -212,8 +355,84 @@
         <img src="memories/m (1).jpg" style="width:100%">
     </div>
   </div> -->
-</div>
+  <div id="login-container" class="login-container">
+    <div class="login-sub">
+      <center>
+        <br><br><br>
+    <h2> LOGIN</h2>
+    <input type="password" class="input" id="name" placeholder="Enter your ID"><br><br>
+    <!-- <input type="text" class="input" id="id" placeholder="Enter your name"><br>
+    <input type="text" class="input" id="roll" placeholder="Input a value"><br>
+    <input type="text" class="input" id="ume" placeholder="Input a value"><br><br> -->
+    <a class="btn btn-login" onclick="login()">Login</a>
+  </center>
+  </div>
+  </div>
 <script>
+
+  function login_show(){
+    var login = document.getElementById('login-container');
+    login.style.display = 'block';
+  }
+  function login(){
+    var greet = "Welcome ";
+    var avatar= '<img id="user_avatar" src="img/profile-avatar.png">';
+    var loginCont = document.getElementById('login-container');
+    var input = document.getElementById('name').value;
+    var user = document.getElementById('user_name');
+    var control = document.getElementById('home');
+    var userContainer = document.getElementById('user_detail_container');
+    var mech = "Mechanical";
+    var timeout = setTimeout(reset, 120000);
+    //var x[i] = ["Om Lokhande", "Shreyash"];
+    if(input == 8090 || input == 22){
+      control.style.display = 'block';
+      user.innerHTML = greet + 'Om';
+    //$("#login-container").slideUp("fast");
+      loginCont.style.display = 'none';
+      notify({
+        message: "Logged In",
+        color: 'success',
+        timeout: 5000
+      });
+      userContainer.style.display = 'block';
+    }
+    else{
+      login_error();
+    }
+    if(input == 1111 || input == 33){
+      control.style.display = 'block';
+      user.innerHTML = greet + 'to Community Mode';
+      loginCont.style.display = 'none';
+      notify({
+        message: "Logged In",
+        color: 'success',
+        timeout: 5000
+      });
+      userContainer.style.display = 'block';
+    }
+    else{
+      login_error();
+    }
+    function login_error(){
+      loginCont.style.display = 'none';
+      notify({
+        message: "Warning! Authorized persons only!",
+        color: 'danger',
+        timeout: 5000
+      });
+      //control.style.display = 'none';
+    }
+    function reset(){
+      login_show();
+      notify({
+        message: "Auto Locked",
+        color: 'danger',
+        timeout: 5000
+      });
+    }
+  }
+
 function materials(){window.location = "pages/materials.html";}
 function announcements(){window.location = "pages/announcements.html";}
 
@@ -223,6 +442,10 @@ function eeeLMS(){window.location = "http://52.7.61.3/eee/login/index.php";}
 
 function error(){alert("Something went wrong, please contact our team or try again later.")}
 </script>
+<link rel="stylesheet" href="lib/navbar/assets/css/styles.css">
+<link rel="stylesheet" href="lib/toast/assets/notify.min.css" />
+<script src="lib/toast/assets/notify.min.js"></script>
+<script src="lib/navbar/assets/js/main.js"></script>
 <!-- <script src="https://rubyproducti9n.github.io/concertera/mdb/js/global.min.js"></script> -->
 </body>
 </html>
