--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <!-- <link href="../rubproducti9n/mdb/css/global.min.css" rel="stylesheet"> -->
     <link href="css/global.min.css" rel="stylesheet">
-    <link href="https://rubyproducti9n.github.io/concertera/mdb/css/global.min.css" rel="stylesheet">
-    <link href="https://rubyproducti9n.github.io/concertera/css/room.css" rel="stylesheet">
+    <!-- <link href="https://rubyproducti9n.github.io/concertera/mdb/css/global.min.css" rel="stylesheet"> -->
+    <!-- <link href="https://rubyproducti9n.github.io/concertera/css/room.css" rel="stylesheet"> -->
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -21,9 +21,10 @@
     @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Comfortaa:wght@700&display=swap');
     @import url("//use.fontawesome.com/releases/v5.15.3/css/all.css");
-    body{ background: rgb(0, 0, 0); user-select: none;}
+    body{ background: rgb(255, 255, 255); user-select: none;}
     hr{background: rgb(75, 75, 75);}
     .nav-bar{
+      display: none;
   position: fixed;
   top: 10px;
   left: 10px;
@@ -57,7 +58,7 @@
     }
     .section-title{
       padding: 0 40px;
-      color: rgb(255, 255, 255);
+      color: rgb(0, 0, 0);
       font-size: 22px;
       font-weight: 600;
       font-family: 'Comfortaa', cursive;
@@ -134,7 +135,7 @@ border: 0px #000 solid;}
         border-radius: 100%;
         margin-left: 0px;
     }
-.custom-card{
+.custom-mech-card{
   background: rgba(255, 255, 255, 0);
   border: 1px rgba(0, 0, 0, 0) solid;
   border-radius: 20px;
@@ -230,7 +231,7 @@ footer{
         border-radius: 100%;
         margin-left: 10px;
     }
-.custom-card{
+.custom-mech-card{
   background: rgba(255, 255, 255, 0);
   border: 1px rgba(0, 0, 0, 0) solid;
   border-radius: 20px;
@@ -283,34 +284,29 @@ footer{
 </a>
 </div>
 <center>
-    <div class="modern-navigation">
-    <div class="modern-dash"></div><br>
-    <span class="disabled" onclick="back()">
-      <a class="" data-mdb-toggle="tooltip" title="Hi! I'm tooltip">
-        <i class="material-icons modern-nav-ic">arrow_back</i>
-      </a>
+  <div class="modern-navigation">
+  <div class="modern-dash"></div><br>
+  <span class="menu-tooltip disabled" onclick="back()">
+    <span class="menu-tooltiptext">Back</span>
+  <i class="material-icons modern-nav-ic">arrow_back</i>
+</span>
+  <span class="menu-tooltip disabled" onclick="home()">
+    <span class="menu-tooltiptext">Home</span>
+    <i class="material-icons modern-nav-ic modern-nav-active">home</i>
   </span>
-    <span class="disabled" onclick="home()">
-      <a class="" data-mdb-toggle="tooltip" title="Home">
-        <i class="material-icons modern-nav-ic  modern-nav-active">home</i>
-      </a>
-    </span>
-    <span class="" onclick="materials()">
-      <a class="" data-mdb-toggle="tooltip" title="Materials">
-        <i class="material-icons modern-nav-ic">dns</i>
-      </a>
-    </span>
-    <span class="" onclick="announcements()">
-      <a class="" data-mdb-toggle="tooltip" title="Announcements">
-        <i class="material-icons modern-nav-ic ">campaign</i>
-      </a>
-    </span>
-    <span class="" onclick="info()">
-      <a class="" data-mdb-toggle="tooltip" title="Info">
-        <i class="material-icons modern-nav-ic ">info</i>
-      </a>
-    </span>
-    </div></center>
+  <span class="menu-tooltip" onclick="search()">
+    <span class="menu-tooltiptext">Search</span>
+    <i class="material-icons modern-nav-ic">search</i>
+  </span>
+  <span class="menu-tooltip" onclick="select()">
+    <span class="menu-tooltiptext">Rooms</span>
+    <i class="material-icons modern-nav-ic">headphones</i>
+  </span>
+  <span class="menu-tooltip" onclick="info()">
+    <span class="menu-tooltiptext">Info</span>
+    <i class="material-icons modern-nav-ic">info</i>
+  </span>
+  </div></center>
 <!-- <nav class="custom-nav">
     <a class="">
       <img class="mech-avatar" src="img/avatar.jpg" draggable="false" /></span>  </a>
@@ -324,9 +320,9 @@ footer{
 <div class="main-container">
 <br><br><br><br>
   <h2 class="section-title">What's New!</h2>
-<div class="custom-card" onclick="">
-    <div class="card ">
-    <img class="card-img" src="img/placeholder.png">
+<div class="custom-mech-card" onclick="">
+    <div class="mech-card ">
+    <img class="mech-card-img" src="img/placeholder.png">
     <h6 class="tags placeholder">#Tags</h6>
     <h3 class="dr-title placeholder">Title Goes Here </h3>
     <h6 class="dr-details placeholder">
@@ -334,8 +330,8 @@ footer{
       <hr><p class="">ConcertEra <i class="fa fa-check-circle"></i> • 06 Mar 2022</p>
     </h6>
   </div>
-  <div class="card">
-  <img class="card-img" src="img/placeholder.png">
+  <div class="mech-card">
+  <img class="mech-card-img" src="img/placeholder.png">
   <h6 class="tags">#Tags</h6>
   <h3 class="dr-title">Title Goes Here </h3>
   <h6 class="dr-details">
@@ -343,8 +339,8 @@ footer{
     <hr><p class="">ConcertEra <i class="fa fa-check-circle"></i> • 06 Mar 2022</p>
   </h6>
 </div>
-<div class="card">
-<img class="card-img" src="img/placeholder.png">
+<div class="mech-card">
+<img class="mech-card-img" src="img/placeholder.png">
 <h6 class="tags">#Tags</h6>
 <h3 class="dr-title">Title Goes Here </h3>
 <h6 class="dr-details">
@@ -352,8 +348,8 @@ footer{
   <hr><p class="">ConcertEra <i class="fa fa-check-circle"></i> • 06 Mar 2022</p>
 </h6>
 </div>
-<div class="card">
-<img class="card-img" src="img/placeholder.png">
+<div class="mech-card">
+<img class="mech-card-img" src="img/placeholder.png">
 <h6 class="tags">#Tags</h6>
 <h3 class="dr-title">Title Goes Here </h3>
 <h6 class="dr-details">
@@ -366,8 +362,8 @@ footer{
  <br><hr width="95%"><br>
 
   <h2 class="section-title"> <i class="fa fa-user-circle"></i> Mechanical Engineering Students Association </h2><br>
-<div class="custom-card" onclick="">
-<div class="card">
+<div class="custom-mech-card" onclick="">
+<div class="mech-card">
   <center>
   <img class="profile-img" src="img/profile-avatar.png" draggable="false">
 </center>
@@ -377,11 +373,11 @@ footer{
     Class: F.Y B.TECH<br>
     Div: <br>
   </h6>
-  <button class="mech-btn-fill disabled">Contact Me</button>
-  <button class="mech-btn-outline">Learn More</button><br>
+  <button class="mech-btn disabled">Contact Me</button>
+  <button class="mech-btn">Learn More</button><br>
 </div>
 </div>
-<div class="card">
+<div class="mech-card">
   <center>
   <img class="profile-img" src="img/profile-avatar.png" draggable="false">
 </center>
@@ -391,11 +387,11 @@ footer{
     Class: F.Y B.TECH<br>
     Div: <br>
   </h6>
-  <button class="mech-btn-fill">Contact Me</button>
-  <button class="mech-btn-outline">Learn More</a><br>
+  <button class="mech-btn">Contact Me</button>
+  <button class="mech-btn">Learn More</a><br>
 </div>
 </div>
-<div class="card">
+<div class="mech-card">
   <center>
   <img class="profile-img" src="img/profile-avatar.png" draggable="false">
 </center>
@@ -405,11 +401,11 @@ footer{
     Class: F.Y B.TECH<br>
     Div: <br>
   </h6>
-  <button class="mech-btn-fill">Contact Me</button>
-  <button class="mech-btn-outline">Learn More</a><br>
+  <button class="mech-btn">Contact Me</button>
+  <button class="mech-btn">Learn More</a><br>
 </div>
 </div>
-<div class="card">
+<div class="mech-card">
   <center>
   <img class="profile-img" src="img/profile-avatar.png" draggable="false">
 </center>
@@ -419,16 +415,16 @@ footer{
     Class: F.Y B.TECH<br>
     Div: <br>
   </h6>
-  <button class="mech-btn-fill">Contact Me</button>
-  <button class="mech-btn-outline">Learn More</a><br>
+  <button class="mech-btn">Contact Me</button>
+  <button class="mech-btn">Learn More</a><br>
 </div>
 </div></div>
 <br>
 <br><hr width="95%"><br>
 
 <h2 class="section-title">Useful Links <i class="fa fa-external-link-alt"></i> </h2>
-<div class="custom-card" onclick="">
-<div class="card">
+<div class="custom-mech-card" onclick="">
+<div class="mech-card">
   <center>
   <img class="profile-img" src="img/profile-avatar.png" draggable="false">
 </center>
@@ -438,11 +434,11 @@ footer{
     Subjects: BME & EG<br><br>
     <p class=""> <i class="fa fa-clock"></i> 06 Mar 2022</p>
   </h6>
-  <button class="mech-btn-fill" onclick="mechLMS()">Login</button>
-  <button class="mech-btn-outline" onclick="error()">Learn More</a><br>
+  <button class="mech-btn" onclick="mechLMS()">Login</button>
+  <button class="mech-btn" onclick="error()">Learn More</a><br>
 </div>
 </div>
-<div class="card">
+<div class="mech-card">
   <center>
   <img class="profile-img" src="img/profile-avatar.png" draggable="false">
 </center>
@@ -452,11 +448,11 @@ footer{
     Subjects: EM-1 & EP<br><br>
     <p class=""> <i class="fa fa-clock"></i> 06 Mar 2022</p>
   </h6>
-  <button class="mech-btn-fill" onclick="esciLMS()">Login</button>
-  <button class="mech-btn-outline" onclick="error()">Learn More</a><br>
+  <button class="mech-btn" onclick="esciLMS()">Login</button>
+  <button class="mech-btn" onclick="error()">Learn More</a><br>
 </div>
 </div>
-<div class="card">
+<div class="mech-card">
   <center>
   <img class="profile-img" src="img/profile-avatar.png" draggable="false">
 </center>
@@ -466,11 +462,11 @@ footer{
     Subjects: BEE<br><br>
     <p class=""> <i class="fa fa-clock"></i> 06 Mar 2022</p>
   </h6>
-  <button class="mech-btn-fill" onclick="eeeLMS()">Login</button>
-  <button class="mech-btn-outline" onclick="error()">Learn More</a><br>
+  <button class="mech-btn" onclick="eeeLMS()">Login</button>
+  <button class="mech-btn" onclick="error()">Learn More</a><br>
 </div>
 </div>
-<div class="card">
+<div class="mech-card">
   <center>
   <img class="profile-img" src="img/profile-avatar.png" draggable="false">
 </center>
@@ -480,8 +476,8 @@ footer{
     Username and password for LMS<br><br>
     <p class=""> <i class="fa fa-clock"></i> 06 Mar 2022</p>
   </h6>
-  <a class="mech-btn-fill" data-mdb-toggle="modal" data-mdb-target="#login">Login</a>
-  <button class="mech-btn-outline" onclick="error()">Learn More</a><br>
+  <a class="mech-btn" data-mdb-toggle="modal" data-mdb-target="#login">Login</a>
+  <button class="mech-btn" onclick="error()">Learn More</a><br>
 </div>
 </div></div>
 <br><br>
