--- a/user/vivek_78/deep learning.html
+++ b/user/vivek_78/deep learning.html
@@ -39,6 +39,11 @@
                     </a>
                 </li>
                 <li>
+                    <a class="nav-link" href="index.html#query?machine=true,show=false">
+                        Home
+                    </a>
+                </li>
+                <li>
                     <a class="nav-link" href="machine learning.html#query?machine=true,show=false">
                         Machine Learning
                     </a>
