--- a/user/vivek_78/index.html
+++ b/user/vivek_78/index.html
@@ -41,6 +41,11 @@
         <nav class="navbar">
             <ul>
                 <li>
+                    <a class="nav-link" href="index.html#query?machine=true,show=false">
+                        Home
+                    </a>
+                </li>
+                <li>
                     <a class="nav-link" href="machine learning.html#query?machine=true,show=false">
                         Machine Learning
                     </a>
