--- a/user/sonali_65/bionic.html
+++ b/user/sonali_65/bionic.html
@@ -65,7 +65,7 @@
                 <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav">
-                <a class="nav-link" href="#application">Applications</a>
+                <a class="nav-link" href="#">Search</a>
             </li>
             <li class="nav">
                 <a class="nav-link" href="#">About</a>
@@ -192,8 +192,8 @@ A great example of this is shoe company Camper. In-house 3D printing has allowed
 </p>
 </div>
 
-<h1>Some useful applications of 3D Printing</h1>
-<div id="applications" class="card" onclick="plaster()">
+<h1>Some useful uses of 3D Printing</h1>
+<div class="card" onclick="plaster()">
     <footer>
         <img class="img" src="img/fashiobable-plaster.png" draggable="false">
         <h4> Fashionable Plaster </h4>
