--- a/user/sonali_65/index.html
+++ b/user/sonali_65/index.html
@@ -65,10 +65,10 @@
                 <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav">
-                <a class="nav-link" href="#application">Applications</a>
+                <a class="nav-link" href="applications.html">Applications</a>
             </li>
             <li class="nav">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="more.html">About</a>
             </li>
         </ul>
     </nav>
@@ -220,9 +220,9 @@ A great example of this is shoe company Camper. In-house 3D printing has allowed
     <h3>Error 505</h3>
 </div>
 <script>
-function plaster(){window.location = "plaster.html";}
-function bionic(){window.location = "bionic.html";}
-function char(){window.location = "char.html";}
+function plaster(){window.location = "more.html";}
+function bionic(){window.location = "more.html";}
+function char(){window.location = "more.html";}
 </script>
 </body>
 </html>
