--- a/user/anjali_/about.html
+++ b/user/anjali_/about.html
@@ -55,59 +55,15 @@
     </nav>
 
     <div class="home">
-        <h2>Branch</h2>
+        <h2>Info</h2>
         <div class="card" onclick="site()">
             <img class="img" src="img/logo.jpg">
             <div class="title default-font">
-                Information Technology
-            </div>
-        </div>
-        <div class="card" onclick="site()">
-            <img class="img" src="img/logo.jpg">
-            <div class="title default-font">
-                Computer Engineering
-            </div>
-        </div>
-        <div class="card" onclick="site()">
-            <img class="img" src="img/logo.jpg">
-            <div class="title default-font">
-                Civil Engineering
-            </div>
-        </div>
-        <div class="card" onclick="site()">
-            <img class="img" src="img/logo.jpg">
-            <div class="title default-font">
-                Electrical & Telecommunication Engineering
-            </div>
-        </div>
-        <div class="card" onclick="site()">
-            <img class="img" src="img/logo.jpg">
-            <div class="title default-font">
-                Mechanical Engineering
-            </div>
-        </div>
-        <div class="card" onclick="site()">
-            <img class="img" src="img/logo.jpg">
-            <div class="title default-font">
-                Electrical Engineering
-            </div>
-        </div>
-        <div class="card" onclick="site()">
-            <img class="img" src="img/logo.jpg">
-            <div class="title default-font">
-                MBA
-            </div>
-        </div>
-        <div class="card" onclick="site()">
-            <img class="img" src="img/logo.jpg">
-            <div class="title default-font">
-                Engineering Science
-            </div>
-        </div>
-        <div class="card" onclick="site()">
-            <img class="img" src="img/logo.jpg">
-            <div class="title default-font">
-                Mechatronics Engineering
+                <h3>Group</h3>
+                <li>Anjali Tanpure</li>
+                <li>Serin Thonnumkuzhi</li>
+                <li>Dnyaneshwar Thorat</li>
+                <li>Gopal Suryavanshi</li>
             </div>
         </div>
     </div>
