--- a/album.html
+++ b/album.html
@@ -211,31 +211,28 @@
 
             <div class="nav__menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link active">Home</a></li>
+                    <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
 
                     <li class="nav__item dropdown">
                         <a href="#" class="nav__link dropdown__link">About <i class='bx bx-chevron-down dropdown__icon'></i></a>
 
 
                         <ul class="dropdown__menu">
-                            <li class="dropdown__item"><a href="#" class="nav__link">About me</a></li>
+                            <li class="dropdown__item"><a href="#" class="nav__link">About Us</a></li>
                             <li class="dropdown__item"><a href="#" class="nav__link">Location</a></li>
                             <li class="dropdown__item"><a href="#" class="nav__link">Studies</a></li>
                         </ul>
                     </li>
 
-                    <li class="nav__item"><a href="#" class="nav__link">Skills</a></li>
+                    <li class="nav__item dropdown"><a href="#" class="nav__link">Skills <i class='bx bx-chevron-down dropdown__icon'></i></a>
 
-                    <li class="nav__item dropdown">
-                        <a href="#" class="nav__link dropdown__link">Works <i class='bx bx-chevron-down dropdown__icon'></i></a>
-
-
-                        <ul class="dropdown__menu">
-                            <li class="dropdown__item"><a href="#" class="nav__link">Recent jobs</a></li>
-                            <li class="dropdown__item"><a href="#" class="nav__link">Better jobs</a></li>
-                            <li class="dropdown__item"><a href="#" class="nav__link">Work Awards</a></li>
-                        </ul>
+                      <ul class="dropdown__menu">
+                          <li class="dropdown__item"><a href="#" class="nav__link">Video Editing</a></li>
+                          <li class="dropdown__item"><a href="#" class="nav__link">Web Management</a></li>
+                          <li class="dropdown__item"><a href="#" class="nav__link">Programming Knowledge</a></li>
+                      </ul>
                     </li>
+
 
                     <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
                 </ul>
